<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/windowBackground"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/user_label"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="79dp"
        android:textColorHint="#757575"
        android:textColor="#757575" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/pass_label"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="44dp"
        android:textColorHint="#757575"
        android:textColor="#757575" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/login_label"
        android:id="@+id/BtnLogin"
        android:layout_below="@+id/editText2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:onClick="validarUsuario"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/register_label"
        android:id="@+id/BtnRegister"
        android:layout_below="@+id/BtnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />
</LinearLayout>