
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/windowBackground"
    tools:context=".RegisterActivity">

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/user_label"
        android:ems="10"
        android:id="@+id/editText"
        android:layout_marginTop="35dp"
        android:textColorHint="#757575"
        android:textColor="#757575"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/email_label"
        android:ems="10"
        android:id="@+id/editText2"
        android:layout_marginTop="32dp"
        android:textColorHint="#757575"
        android:textColor="#757575"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/pass_label"
        android:ems="10"
        android:id="@+id/editText3"
        android:textColorHint="#757575"
        android:textColor="#757575"
        android:layout_below="@+id/editText2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="38dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/confirm_pass"
        android:ems="10"
        android:id="@+id/editText4"
        android:textColorHint="#757575"
        android:textColor="#757575"
        android:layout_below="@+id/editText3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:text="@string/create_user_label"
        android:id="@+id/BtnLogin"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="38dp" />
</RelativeLayout>